[gd_scene load_steps=17 format=4 uid="uid://bg17mjempui"]

[ext_resource type="Script" path="res://gameplay/levels/level9/Level_9.gd" id="1_muchl"]
[ext_resource type="TileSet" uid="uid://b3c1hcw6x6y0p" path="res://assets/tiles0_0.tres" id="2_nhfou"]
[ext_resource type="Script" path="res://gameplay/levels/level9/Level_9_Circuit.gd" id="4_0nowy"]
[ext_resource type="PackedScene" uid="uid://d131hwcs5mgd5" path="res://gameplay/elements/Damage.tscn" id="5_7ia16"]
[ext_resource type="Texture2D" uid="uid://dsgotgahmquxy" path="res://assets/tiles0.png" id="6_3draa"]
[ext_resource type="Script" path="res://gameplay/elements/Beam.gd" id="7_4nbr7"]
[ext_resource type="PackedScene" uid="uid://3xgycv5wxm7e" path="res://gameplay/elements/Button.tscn" id="8_5mb4r"]
[ext_resource type="PackedScene" uid="uid://lukwf4jblxo8" path="res://gameplay/elements/Coin.tscn" id="9_gnk31"]
[ext_resource type="PackedScene" uid="uid://cbaaxryfl454c" path="res://gameplay/elements/Exit.tscn" id="10_t0a2i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rubjj"]
size = Vector2(4, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jl05"]
atlas = ExtResource("6_3draa")
region = Rect2(168, 132, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_heayj"]
atlas = ExtResource("6_3draa")
region = Rect2(180, 132, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_1p5sf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jl05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heayj")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgg8t"]
size = Vector2(204, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6i1b"]
atlas = ExtResource("6_3draa")
region = Rect2(180, 108, 12, 12)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_ivpx0"]
atlas = ExtResource("6_3draa")
region = Rect2(180, 96, 12, 12)
filter_clip = true

[node name="Level_3" type="Node2D"]
script = ExtResource("1_muchl")

[node name="Map" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAfAAAAAAALAAMAAAAfAP//AAALAAIAAAAeAAAAAAAJAAMAAAAeAP//AAAJAAIAAAAdAAAAAAAJAAMAAAAdAP//AAAJAAIAAAAcAAAAAAAJAAMAAAAcAP//AAAJAAIAAAAbAAAAAAAJAAMAAAAbAP//AAAJAAIAAAAaAAAAAAAJAAMAAAAaAP//AAAJAAIAAAAZAAAAAAAJAAMAAAAZAP//AAAJAAIAAAAYAAAAAAAJAAMAAAAYAP//AAAFAAEAAAAXAAAAAAAJAAMAAAAXAP//AAAKAAAAAAAWAAAAAAAJAAMAAAAWAP//AAAKAAAAAAAVAAAAAAAJAAMAAAAVAP//AAAKAAAAAAAUAAAAAAAJAAMAAAAUAP//AAAKAAAAAAATAAAAAAAJAAMAAAATAP//AAAKAAAAAAASAAAAAAAJAAMAAAASAP//AAAJAAAAAAARAAAAAAAJAAMAAAARAP//AAAKAAAAAAAQAAAAAAAJAAMAAAAQAP//AAAKAAAAAAAPAAAAAAAJAAMAAAAPAP//AAAKAAAAAAAOAAAAAAAJAAMAAAAOAP//AAAKAAAAAAANAAAAAAAJAAMAAAANAP//AAAKAAAAAAAMAAAAAAAJAAMAAAAMAP//AAAJAAAAAAALAAAAAAAJAAMAAAALAP//AAAKAAAAAAAKAAAAAAAJAAMAAAAKAP//AAAKAAAAAAAJAAAAAAAJAAMAAAAJAP//AAAKAAAAAAAIAAAAAAAJAAMAAAAIAP//AAAKAAAAAAAHAAAAAAAJAAMAAAAHAP//AAAKAAAAAAAGAAAAAAAJAAMAAAAGAP//AAAGAAEAAAAFAAAAAAAJAAMAAAAFAP//AAAJAAIAAAAEAAAAAAAJAAMAAAAEAP//AAAJAAIAAAADAAAAAAAJAAMAAAADAP//AAAJAAIAAAACAAAAAAAJAAMAAAACAP//AAAJAAIAAAABAAAAAAAJAAMAAAABAP//AAAJAAIAAAAAAAAAAAAJAAMAAAAAAP//AAAJAAIAAAD//wAAAAAIAAMAAAD/////AAAIAAEAAAAAAP7/AAAJAAIAAAAAAP3/AAAJAAIAAAAAAPz/AAAJAAIAAAAAAPv/AAAJAAIAAAAAAPr/AAAJAAIAAAAAAPn/AAAJAAIAAAAAAPj/AAAJAAIAAAAAAPf/AAAJAAIAAAAAAPb/AAAGAAEAAAAAAPX/AAALAAIAAAAAAPT/AAALAAIAAAAAAPP/AAALAAIAAAAAAPL/AAALAAIAAAAAAPH/AAAGAAIAAAAAAPD/AAAJAAIAAAAAAO//AAAJAAIAAAAAAO7/AAAJAAIAAAAAAO3/AAAJAAIAAAAAAOz/AAAGAAEAAAAAAOv/AAALAAIAAAAAAOr/AAALAAIAAAAAAOn/AAALAAIAAAAAAOj/AAALAAIAAAAAAOf/AAAGAAIAAAAAAOb/AAAJAAIAAAAAAOX/AAAJAAIAAAAAAOT/AAAJAAIAAAAAAOP/AAAJAAIAAAAAAOL/AAAGAAEAAAAAAOH/AAALAAIAAAD///7/AAAIAAEAAAD///3/AAAIAAEAAAD///z/AAAIAAEAAAD///v/AAAIAAEAAAD///r/AAAIAAEAAAD///n/AAAIAAEAAAD///j/AAAIAAEAAAD///f/AAAIAAEAAAD///b/AAAIAAEAAAD///X/AAAIAAEAAAD///T/AAAIAAEAAAD///P/AAAIAAEAAAD///L/AAAIAAEAAAD///H/AAAIAAEAAAD///D/AAAIAAEAAAD//+//AAAIAAEAAAD//+7/AAAIAAEAAAD//+3/AAAIAAEAAAD//+z/AAAIAAEAAAD//+v/AAAIAAEAAAD//+r/AAAIAAEAAAD//+n/AAAIAAEAAAD//+j/AAAIAAEAAAD//+f/AAAIAAEAAAD//+b/AAAIAAEAAAD//+X/AAAIAAEAAAD//+T/AAAIAAEAAAD//+P/AAAIAAEAAAD//+L/AAAIAAEAAAD//+H/AAAIAAEAAAAfANr/AAALAAIAAAAeANr/AAAJAAIAAAAdANr/AAAJAAIAAAAcANr/AAAJAAIAAAAbANr/AAAFAAIAAAAaANr/AAAJAAMAAAAZANr/AAAJAAMAAAAYANr/AAAJAAMAAAAXANr/AAAJAAMAAAAWANr/AAAJAAMAAAAVANr/AAAKAAMAAAAUANr/AAAJAAMAAAATANr/AAAJAAMAAAASANr/AAAJAAMAAAARANr/AAAJAAMAAAAQANr/AAAJAAMAAAAPANr/AAAJAAMAAAAOANr/AAAJAAMAAAANANr/AAAJAAMAAAAMANr/AAAJAAMAAAALANr/AAAJAAMAAAAKANr/AAAJAAMAAAAJANr/AAAKAAMAAAAIANr/AAAJAAMAAAAHANr/AAAJAAMAAAAGANr/AAAJAAMAAAAFANr/AAAJAAMAAAAEANr/AAAJAAMAAAADANr/AAAGAAIAAAACANr/AAAJAAIAAAABANr/AAAJAAIAAAAAANv/AAAJAAIAAAAAANr/AAAJAAIAAAD//9v/AAAIAAEAAAD//9r/AAAIAAEAAAAAAOD/AAALAAIAAAAAAN//AAALAAIAAAAAAN7/AAALAAIAAAAAAN3/AAAGAAIAAAAAANz/AAAJAAIAAAD//+D/AAAIAAEAAAD//9//AAAIAAEAAAD//97/AAAIAAEAAAD//93/AAAIAAEAAAD//9z/AAAIAAEAAAADAPv/AAAGAAEAAAADAPr/AAALAAIAAAADAPn/AAALAAIAAAADAPj/AAALAAIAAAADAPf/AAALAAIAAAAGAPz/AAALAAIAAAAGAP3/AAALAAIAAAAGAP7/AAALAAIAAAAJAPv/AAAAAAEAAAAJAPr/AAAAAAEAAAAJAPn/AAAAAAEAAAAJAPj/AAAAAAEAAAAJAPf/AAAAAAEAAAAJAPb/AAADAAAAAAAGAPb/AAACAAIAAAAGAPP/AAAAAAEAAAAGAPT/AAAAAAEAAAAGAPX/AAAAAAEAAAAGAPH/AAAAAAAAAAAGAPL/AAAAAAEAAAADAPH/AAALAAMAAAADAPD/AAALAAIAAAADAO3/AAALAAIAAAADAO7/AAALAAIAAAADAO//AAALAAIAAAAGAOz/AAAAAAIAAAAGAOv/AAAAAAEAAAAGAOf/AAAAAAAAAAAGAOj/AAAAAAEAAAAGAOn/AAAAAAEAAAAGAOr/AAAAAAEAAAADAOf/AAALAAMAAAADAOT/AAALAAIAAAADAOX/AAALAAIAAAADAOb/AAALAAIAAAADAOP/AAALAAIAAAAGAOL/AAAAAAIAAAAGAN//AAAAAAEAAAAGAOD/AAAAAAEAAAAGAOH/AAAAAAEAAAAGAN3/AAAAAAAAAAAGAN7/AAAAAAEAAAD//9n/AAAIAAAAAAAAANn/AAAKAAAAAAABANn/AAAKAAAAAAACANn/AAAKAAAAAAADANn/AAAKAAAAAAAEANn/AAAKAAAAAAAGANn/AAAKAAAAAAAFANn/AAAKAAAAAAAHANn/AAAKAAAAAAAIANn/AAAKAAAAAAAJANn/AAAKAAAAAAALANn/AAAKAAAAAAAKANn/AAAKAAAAAAAMANn/AAAKAAAAAAANANn/AAAKAAAAAAAOANn/AAAKAAAAAAAQANn/AAAKAAAAAAAPANn/AAAKAAAAAAARANn/AAAKAAAAAAASANn/AAAKAAAAAAATANn/AAAKAAAAAAAUANn/AAAKAAAAAAAVANn/AAAKAAAAAAAfANn/AAALAAAAAAAeANn/AAAKAAAAAAAcANn/AAAKAAAAAAAdANn/AAAKAAAAAAAbANn/AAAKAAAAAAAaANn/AAAKAAAAAAAZANn/AAAKAAAAAAAYANn/AAAKAAAAAAAXANn/AAAKAAAAAAAWANn/AAAKAAAAAAADANv/AAALAAIAAAADANz/AAALAAIAAAADAN3/AAALAAMAAAAJAOz/AAAAAAAAAAAJAO3/AAAAAAEAAAAJAO7/AAAAAAEAAAAJAO//AAAAAAEAAAAJAPD/AAAAAAEAAAAJAPH/AAAAAAIAAAAJAOf/AAACAAcAAAAJAOb/AAAAAAEAAAAJAOX/AAAAAAEAAAAJAOT/AAAAAAEAAAAJAOP/AAAAAAEAAAAJAOL/AAAAAAAAAAAJAN3/AAAAAAIAAAAJANz/AAAAAAEAAAAJANv/AAAAAAEAAAAMAN3/AAAIAAAAAAAMAN7/AAAIAAEAAAAMAN//AAAEAAIAAAAMAOD/AAAAAAEAAAAMAOH/AAAAAAEAAAAMAOL/AAAAAAIAAAAMAOf/AAACAAcAAAAMAOj/AAAAAA0AAAAMAOn/AAAAAA0AAAAMAOr/AAAAAA4AAAAMAPH/AAAAAAAAAAAMAPL/AAAAAAIAAAAMAPT/AAAAAAAAAAAMAPX/AAAAAAEAAAAMAPb/AAAAAAIAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAEAAAAMAP7/AAAAAAEAAAASAPz/AAAAAAAAAAASAP3/AAAAAAEAAAASAP7/AAAAAAEAAAAYAPv/AAAIAAAAAAAYAPz/AAAIAAEAAAAYAP3/AAAIAAEAAAAYAP7/AAAIAAEAAAAeAPv/AAAJAAIAAAAeAPz/AAAJAAIAAAAeAP3/AAAJAAIAAAAeAP7/AAAJAAIAAAAfAP7/AAALAAIAAAAfAP3/AAALAAIAAAAfAPz/AAALAAIAAAAfAPv/AAALAAIAAAAfAPr/AAALAAIAAAAfAPn/AAALAAIAAAAfAPj/AAALAAIAAAAfAPf/AAALAAIAAAAfAPb/AAALAAIAAAAfAPX/AAALAAIAAAAfAPT/AAALAAIAAAAfAPP/AAALAAIAAAAfAPL/AAALAAIAAAAfAPH/AAALAAIAAAAfAPD/AAALAAIAAAAfAO//AAALAAIAAAAfAO7/AAALAAIAAAAfAO3/AAALAAIAAAAfAOz/AAALAAIAAAAfAOv/AAALAAIAAAAfAOr/AAALAAIAAAAfAOn/AAALAAIAAAAfAOj/AAALAAIAAAAfAOf/AAALAAIAAAAfAOb/AAALAAIAAAAfAOX/AAALAAIAAAAfAOT/AAALAAIAAAAfAOP/AAALAAIAAAAfAOL/AAALAAIAAAAfAOH/AAALAAIAAAAfAOD/AAALAAIAAAAfAN//AAALAAIAAAAfAN7/AAALAAIAAAAfAN3/AAALAAIAAAAfANz/AAALAAIAAAAfANv/AAALAAIAAAAeAPr/AAAJAAIAAAAeAPn/AAAJAAIAAAAeAPj/AAAJAAIAAAAeAPf/AAAJAAIAAAAeAPb/AAAFAAEAAAAeAPX/AAAIAAEAAAAeAPT/AAAIAAEAAAAeAPP/AAAIAAEAAAAeAPL/AAAIAAEAAAAeAPH/AAAFAAIAAAAeAPD/AAAJAAIAAAAeAO//AAAJAAIAAAAeAO7/AAAJAAIAAAAeAO3/AAAJAAIAAAAeAOz/AAAFAAEAAAAeAOv/AAAIAAEAAAAeAOr/AAAIAAEAAAAeAOn/AAAIAAEAAAAeAOj/AAAIAAEAAAAeAOf/AAAFAAIAAAAeAOb/AAAJAAIAAAAeAOX/AAAJAAIAAAAeAOT/AAAJAAIAAAAeAOP/AAAJAAIAAAAeAOL/AAAFAAEAAAAeAOH/AAAIAAEAAAAeAOD/AAAIAAEAAAAeAN//AAAIAAEAAAAeAN7/AAAIAAEAAAAeAN3/AAAFAAIAAAAeANz/AAAJAAIAAAAeANv/AAAJAAIAAAAVAPv/AAAAAAEAAAAVAPr/AAAAAAEAAAAVAPf/AAAAAAEAAAAVAPb/AAABAAAAAAAVAPj/AAAAAAEAAAAVAPn/AAAAAAEAAAAbAPv/AAAFAAEAAAAbAPr/AAAIAAEAAAAbAPn/AAAIAAEAAAAbAPj/AAAIAAEAAAAbAPf/AAAIAAEAAAAbAPb/AAAFAAAAAAAPAPD/AAAJAAwAAAAPAO//AAAAAA0AAAAPAO7/AAAAAA0AAAAPAO3/AAAAAA0AAAANAN3/AAAKAAAAAAAOAN3/AAAKAAAAAAAPAN3/AAAKAAAAAAASAN3/AAALAAAAAAASAN7/AAALAAIAAAASAN//AAAHAAIAAAASAOD/AAAAAAEAAAASAOH/AAAAAAEAAAASAOL/AAAAAAIAAAARAN3/AAAKAAAAAAAQAN3/AAAKAAAAAAAPAOT/AAAAAAAAAAAPAOX/AAAAAAEAAAAPAOb/AAAAAAEAAAAPAOf/AAACAAcAAAASAOf/AAACAAcAAAASAOj/AAAAAA0AAAASAOn/AAAAAA0AAAASAOr/AAAAAA4AAAASAPH/AAAAAAAAAAASAPL/AAAAAAIAAAASAPT/AAAAAAAAAAASAPX/AAAAAAEAAAASAPb/AAAAAAIAAAAVAN3/AAAAAAIAAAAVANz/AAAAAAEAAAAVANv/AAAAAAEAAAAbAN3/AAAIAAMAAAAbANz/AAAIAAEAAAAbANv/AAAIAAEAAAAYAN3/AAAAAAAAAAAYAN7/AAAAAAEAAAAYAN//AAAAAAEAAAAYAOD/AAAAAAEAAAAYAOH/AAAAAAEAAAAYAOL/AAAAAAIAAAAYAOf/AAAAAAAAAAAYAOj/AAAAAAEAAAAYAOn/AAAAAAEAAAAYAOr/AAAAAAEAAAAYAOv/AAAAAAEAAAAYAOz/AAAAAAIAAAAYAPH/AAAAAAAAAAAYAPL/AAAAAAEAAAAYAPP/AAAAAAEAAAAYAPT/AAAAAAEAAAAYAPX/AAAAAAEAAAAYAPb/AAACAAIAAAAVAPH/AAAAAAIAAAAVAPD/AAAAAAEAAAAVAO//AAAAAAEAAAAVAO7/AAAAAAEAAAAVAO3/AAAAAAEAAAAVAOz/AAAAAAAAAAAbAPH/AAAIAAMAAAAbAPD/AAAIAAEAAAAbAO//AAAIAAEAAAAbAO7/AAAIAAEAAAAbAO3/AAAIAAEAAAAbAOz/AAAIAAAAAAAVAOf/AAACAAcAAAAVAOb/AAAAAAEAAAAVAOX/AAAAAAEAAAAVAOT/AAAAAAEAAAAVAOP/AAAAAAEAAAAVAOL/AAAAAAAAAAAbAOL/AAAIAAAAAAAbAOP/AAAIAAEAAAAbAOT/AAAIAAEAAAAbAOX/AAAIAAEAAAAbAOb/AAAIAAEAAAAbAOf/AAAIAAMAAAAGAPv/AAALAAAAAAADAPb/AAAGAAAAAAADAOz/AAALAAAAAAADAOL/AAALAAAAAAANAPb/AAABAAcAAAAOAPb/AAACAAcAAAAPAPb/AAACAAcAAAAQAPb/AAACAAcAAAARAPb/AAADAAcAAAAOAOf/AAACAAcAAAANAOf/AAACAAcAAAARAOf/AAACAAcAAAAQAOf/AAACAAcAAAAFAPv/AAAKAAAAAAAEAPv/AAAKAAAAAAACAOz/AAAKAAAAAAABAOz/AAAKAAAAAAACAPH/AAAJAAMAAAABAPH/AAAJAAMAAAAcAPH/AAAJAAMAAAAdAPH/AAAJAAMAAAAdAOz/AAAKAAAAAAAcAOz/AAAKAAAAAAAcAO3/AAAJAAIAAAAcAO7/AAAJAAIAAAAcAPD/AAAJAAIAAAAdAPD/AAAJAAIAAAAdAO//AAAJAAIAAAAdAO7/AAAJAAIAAAAdAO3/AAAJAAIAAAAcAO//AAAJAAIAAAACAPD/AAAJAAIAAAABAPD/AAAJAAIAAAABAO//AAAJAAIAAAACAO//AAAJAAIAAAACAO7/AAAJAAIAAAACAO3/AAAJAAIAAAABAO3/AAAJAAIAAAABAO7/AAAJAAIAAAABAOL/AAAKAAAAAAACAOL/AAAKAAAAAAACAOP/AAAJAAIAAAACAOT/AAAJAAIAAAACAOX/AAAJAAIAAAACAOb/AAAJAAIAAAACAOf/AAAJAAMAAAABAOb/AAAJAAIAAAABAOX/AAAJAAIAAAABAOT/AAAJAAIAAAABAOP/AAAJAAIAAAABAOf/AAAJAAMAAAAcAOL/AAAKAAAAAAAdAOL/AAAKAAAAAAAdAOP/AAAJAAIAAAAdAOT/AAAJAAIAAAAdAOX/AAAJAAIAAAAdAOb/AAAJAAIAAAAdAOf/AAAJAAMAAAAcAOf/AAAJAAMAAAAcAOb/AAAJAAIAAAAcAOX/AAAJAAIAAAAcAOT/AAAJAAIAAAAcAOP/AAAJAAIAAAAdAN3/AAAJAAMAAAAcAN3/AAAJAAMAAAAcANz/AAAJAAIAAAAcANv/AAAJAAIAAAAdANv/AAAJAAIAAAAdANz/AAAJAAIAAAACAN3/AAAJAAMAAAABAN3/AAAJAAMAAAABANz/AAAJAAIAAAABANv/AAAJAAIAAAACANv/AAAJAAIAAAACANz/AAAJAAIAAAABAPb/AAAKAAAAAAACAPb/AAAKAAAAAAACAPf/AAAJAAIAAAACAPj/AAAJAAIAAAACAPn/AAAJAAIAAAACAPr/AAAJAAIAAAACAPv/AAAJAAIAAAABAPv/AAAJAAIAAAABAPr/AAAJAAIAAAABAPn/AAAJAAIAAAABAPj/AAAJAAIAAAABAPf/AAAJAAIAAAAcAPr/AAAJAAIAAAAcAPv/AAAJAAIAAAAdAPr/AAAJAAIAAAAdAPn/AAAJAAIAAAAdAPj/AAAJAAIAAAAdAPf/AAAJAAIAAAAcAPb/AAAKAAAAAAAcAPf/AAAJAAIAAAAcAPj/AAAJAAIAAAAcAPn/AAAJAAIAAAAdAPb/AAAKAAAAAAAdAPv/AAAJAAIAAAABAPz/AAAJAAIAAAABAP3/AAAJAAIAAAABAP7/AAAJAAIAAAACAP7/AAAJAAIAAAADAP7/AAAJAAIAAAAEAP7/AAAJAAIAAAAEAP3/AAAJAAIAAAAFAP3/AAAJAAIAAAAEAPz/AAAJAAIAAAADAPz/AAAJAAIAAAACAPz/AAAJAAIAAAACAP3/AAAJAAIAAAADAP3/AAAJAAIAAAAFAPz/AAAJAAIAAAAFAP7/AAAJAAIAAAAZAPv/AAAKAAAAAAAaAPv/AAAKAAAAAAAcAPz/AAAJAAIAAAAcAP3/AAAJAAIAAAAcAP7/AAAJAAIAAAAbAP7/AAAJAAIAAAAaAP7/AAAJAAIAAAAaAP3/AAAJAAIAAAAaAPz/AAAJAAIAAAAZAP3/AAAJAAIAAAAZAPz/AAAJAAIAAAAZAP7/AAAJAAIAAAAbAPz/AAAJAAIAAAAbAP3/AAAJAAIAAAAdAPz/AAAJAAIAAAAdAP3/AAAJAAIAAAAdAP7/AAAJAAIAAAANAPX/AAANAAAAAAAOAPX/AAANAAAAAAAPAPX/AAANAAAAAAAQAPX/AAANAAAAAAARAPX/AAANAAAAAAANAOj/AAANAAAAADAOAOj/AAANAAAAADAPAOj/AAANAAAAADAQAOj/AAANAAAAADARAOj/AAANAAAAADAZAPb/AAACAAMAAAAaAPb/AAACAAMAAAAFAPb/AAACAAMAAAAEAPb/AAACAAMAAAAIAPb/AAACAAMAAAAHAPb/AAACAAMAAAAXAPb/AAACAAMAAAAWAPb/AAACAAMAAAAHAOf/AAABAAcAAAAIAOf/AAACAAcAAAAKAOf/AAACAAcAAAALAOf/AAACAAcAAAATAOf/AAACAAcAAAAUAOf/AAACAAcAAAAWAOf/AAACAAcAAAAXAOf/AAADAAcAAAAMAOb/AAAAAAsAAAASAOb/AAAAAAsAAAALAOb/AAANAAAAAAAKAOb/AAANAAAAAAANAOb/AAANAAAAAAAOAOb/AAANAAAAAAAQAOb/AAANAAAAAAARAOb/AAANAAAAAAATAOb/AAANAAAAAAAUAOb/AAANAAAAAAAHAOj/AAANAAAAADAIAOj/AAANAAAAADAJAOj/AAANAAAAADAKAOj/AAANAAAAADALAOj/AAANAAAAADATAOj/AAANAAAAADAUAOj/AAANAAAAADAVAOj/AAANAAAAADAWAOj/AAANAAAAADAXAOj/AAANAAAAADAaAPr/AAAPAAAAAAAEAPr/AAAPAAAAAAAdAPX/AAANAAAAAAAcAPX/AAANAAAAAAAbAPX/AAANAAAAAAAaAPX/AAANAAAAAAAZAPX/AAANAAAAAAAFAPX/AAANAAAAAAAEAPX/AAANAAAAAAADAPX/AAANAAAAAAACAPX/AAANAAAAAAABAPX/AAANAAAAAAABAOv/AAAPAAAAAAAdAOv/AAAPAAAAAAAdAOj/AAAPAAAAADABAOj/AAAPAAAAADABAN7/AAAPAAAAADAdAN7/AAAPAAAAADAdAPL/AAAPAAAAADABAPL/AAAPAAAAADAEAPf/AAAPAAAAADAaAPf/AAAPAAAAADAdAOH/AAAPAAAAAAABAOH/AAAPAAAAAAANAN//AAAJAAMAAAAOAN//AAAJAAMAAAAPAN//AAAJAAMAAAAQAN//AAAJAAMAAAARAN//AAAJAAMAAAARAN7/AAAJAAIAAAAQAN7/AAAJAAIAAAAPAN7/AAAJAAIAAAAOAN7/AAAJAAIAAAANAN7/AAAJAAIAAAAEANv/AAANAAAAADAFANv/AAANAAAAADAGANv/AAANAAAAADAHANv/AAANAAAAADAIANv/AAANAAAAADAWANv/AAANAAAAADAXANv/AAANAAAAADAYANv/AAANAAAAADAZANv/AAANAAAAADAaANv/AAANAAAAADAMAPv/AAAPAAAAAAASAPv/AAAPAAAAAAARAP7/AAANAAAAAGARAP3/AAANAAAAAGALAP3/AAANAAAAAGALAP7/AAANAAAAAGATAP7/AAANAAAAAFATAP3/AAANAAAAAFANAP7/AAANAAAAAFANAP3/AAANAAAAAFANAPz/AAAMAAAAAFATAPz/AAAMAAAAAFARAPz/AAAOAAAAAGALAPz/AAAOAAAAAGANAPf/AAANAAAAADAOAPf/AAANAAAAADAPAPf/AAANAAAAADAQAPf/AAANAAAAADARAPf/AAANAAAAADAMAPf/AAAOAAAAADASAPf/AAAMAAAAADAWAPf/AAANAAAAAFAWAPj/AAANAAAAAFAWAPn/AAANAAAAAFAWAPr/AAANAAAAAFAWAPv/AAANAAAAAFAWAPz/AAANAAAAAFAWAP3/AAAOAAAAAFAVAPz/AAAAAAEAAAAVAP3/AAAAAAIAAAAJAPz/AAAAAAEAAAAJAP3/AAAAAAIAAAAIAPf/AAANAAAAAGAIAPj/AAANAAAAAGAIAPn/AAANAAAAAGAIAPr/AAANAAAAAGAIAPv/AAANAAAAAGAIAPz/AAANAAAAAGAIAP3/AAAMAAAAAGAMAPP/AAAPAAEAAAASAPP/AAAPAAEAAAAKAPD/AAABAA8AAAALAPD/AAACAA8AAAAMAPD/AAACAA8AAAANAPD/AAAFAAwAAAAOAPD/AAAKAAwAAAAQAPD/AAAKAAwAAAARAPD/AAAGAAwAAAASAPD/AAACAA8AAAATAPD/AAACAA8AAAAUAPD/AAADAA8AAAAPAOz/AAAAAAwAAAAHAPX/AAAPAAEAAAAXAPX/AAAPAAEAAAACAPL/AAAPAAAAADADAPL/AAAPAAAAADADAOj/AAAPAAAAADACAOj/AAAPAAAAADAbAOj/AAAPAAAAADAcAOj/AAAPAAAAADAbAN7/AAAPAAAAADAcAN7/AAAPAAAAADADAN7/AAAPAAAAADACAN7/AAAPAAAAADAYANz/AAANAAAAAAAGANz/AAANAAAAAAAFAN3/AAANAAAAAGAFAN7/AAANAAAAAGAFAN//AAANAAAAAGAFAOD/AAANAAAAAGAFAOH/AAANAAAAAGAFAOL/AAANAAAAAGAXAN3/AAANAAAAAGAXAN7/AAANAAAAAGAXAN//AAANAAAAAGAXAOD/AAANAAAAAGAXAOH/AAANAAAAAGAXAOL/AAANAAAAAGAGAOP/AAANAAAAADAYAOP/AAANAAAAADAHAN3/AAANAAAAAFAHAN7/AAANAAAAAFAHAN//AAANAAAAAFAHAOD/AAANAAAAAFAHAOH/AAANAAAAAFAHAOL/AAANAAAAAFAZAN3/AAANAAAAAFAZAN7/AAANAAAAAFAZAN//AAANAAAAAFAZAOD/AAANAAAAAFAZAOH/AAANAAAAAFAZAOL/AAANAAAAAFAZANz/AAAPAAIAAAAHANz/AAAPAAIAAAAFANz/AAAPAAIAAGAXANz/AAAPAAIAAGAFAOP/AAAPAAIAADAXAOP/AAAPAAIAADAHAOP/AAAPAAIAAFAZAOP/AAAPAAIAAFANAOD/AAAPAAAAADARAOD/AAAPAAAAADAPAOP/AAANAAAAAAAQAOT/AAANAAAAAFAOAOT/AAANAAAAAGAQAOX/AAAOAAAAAFAOAOX/AAAMAAAAAGAQAOP/AAAPAAIAAAAOAOP/AAAPAAIAAGAJAN7/AAANAAAAADAVAN7/AAANAAAAADAWAN3/AAANAAAAAFAKAN3/AAANAAAAAFAIAN3/AAANAAAAAGAUAN3/AAANAAAAAGAIAN7/AAAPAAIAADAUAN7/AAAPAAIAADAKAN7/AAAPAAIAAFAWAN7/AAAPAAIAAFAWANz/AAAMAAAAAFAKANz/AAAMAAAAAFAIANz/AAAOAAAAAGAUANz/AAAOAAAAAGAOAPH/AAAJAA4AAAAOAPL/AAAJAA8AAAAPAPL/AAAJAA8AAAAQAPL/AAAJAA8AAAAQAPH/AAAJAA4AAAAPAPH/AAAJAA4AAAANAPH/AAAIAA0AAAANAPL/AAAIAA8AAAARAPL/AAALAA8AAAARAPH/AAALAA4AAAAEAO3/AAANAAAAAFAEAO7/AAANAAAAAFAEAO//AAANAAAAAFAEAPD/AAANAAAAAFAaAO3/AAANAAAAAGAaAO7/AAANAAAAAGAaAO//AAANAAAAAGAaAPD/AAANAAAAAGAaAOz/AAAOAAAAAGAEAPH/AAAOAAAAAFAEAOz/AAAMAAAAAFAaAPH/AAAMAAAAAGANANv/AAANAAAAADAOANv/AAANAAAAADAPANv/AAANAAAAADAQANv/AAANAAAAADARANv/AAANAAAAADAMANv/AAAOAAAAADASANv/AAAMAAAAADA=")
tile_set = ExtResource("2_nhfou")
metadata/_edit_lock_ = true

[node name="SceneParts" type="Node2D" parent="."]

[node name="Circuit" type="Node2D" parent="."]
script = ExtResource("4_0nowy")
zero = Color(1, 1, 1, 1)
one = Color(1, 0.733333, 0, 1)

[node name="Laser1" parent="Circuit" instance=ExtResource("5_7ia16")]
position = Vector2(150, -432)
metadata/_edit_group_ = true

[node name="Shape1" type="CollisionShape2D" parent="Circuit/Laser1"]
shape = SubResource("RectangleShape2D_rubjj")

[node name="Shape2" type="CollisionShape2D" parent="Circuit/Laser1"]
position = Vector2(72, 0)
shape = SubResource("RectangleShape2D_rubjj")

[node name="View1" type="AnimatedSprite2D" parent="Circuit/Laser1"]
rotation = 1.5708
scale = Vector2(2, 1)
sprite_frames = SubResource("SpriteFrames_1p5sf")
frame_progress = 0.276741
script = ExtResource("7_4nbr7")

[node name="View2" type="AnimatedSprite2D" parent="Circuit/Laser1"]
position = Vector2(72, 0)
rotation = 1.5708
scale = Vector2(2, 1)
sprite_frames = SubResource("SpriteFrames_1p5sf")
frame_progress = 0.276741
script = ExtResource("7_4nbr7")

[node name="Laser2" parent="Circuit" instance=ExtResource("5_7ia16")]
position = Vector2(186, -150)
metadata/_edit_group_ = true

[node name="Shape1" type="CollisionShape2D" parent="Circuit/Laser2"]
shape = SubResource("RectangleShape2D_fgg8t")

[node name="View1" type="AnimatedSprite2D" parent="Circuit/Laser2"]
position = Vector2(-3.8147e-06, 0)
scale = Vector2(17, 1)
sprite_frames = SubResource("SpriteFrames_1p5sf")
frame_progress = 0.276741
script = ExtResource("7_4nbr7")

[node name="Wire1" type="TileMapLayer" parent="Circuit"]
z_index = 1
tile_map_data = PackedByteArray("AAAPAN//AAAMAA4AAAAPAN7/AAAMAAwAAAA=")
tile_set = ExtResource("2_nhfou")

[node name="Wire2" type="TileMapLayer" parent="Circuit"]
z_index = 1
tile_map_data = PackedByteArray("AAAMAN3/AAANAA8AAAANAN3/AAAOAA8AAAAOAN3/AAAOAA8AAAAPAN3/AAAOAAwAAAAQAN3/AAAOAA8AAAARAN3/AAAOAA8AAAASAN3/AAAPAA8AAAAPAN7/AAAMAA4AAAA=")
tile_set = ExtResource("2_nhfou")

[node name="WireLow1" type="TileMapLayer" parent="Circuit"]
z_index = 1
tile_map_data = PackedByteArray("AAAGAPb/AAAMAA4AAAAGAPX/AAAMAA0AAAAGAPT/AAAMAA0AAAAGAPP/AAAMAAwAAAA=")
tile_set = ExtResource("2_nhfou")

[node name="WireLow2" type="TileMapLayer" parent="Circuit"]
z_index = 1
tile_map_data = PackedByteArray("AAAYAPb/AAAMAA4AAAAYAPX/AAAMAA0AAAAYAPT/AAAMAA0AAAAYAPP/AAAMAAwAAAA=")
tile_set = ExtResource("2_nhfou")

[node name="Trigger1" type="Sprite2D" parent="Circuit"]
z_index = 1
position = Vector2(186, -402)
texture = SubResource("AtlasTexture_a6i1b")

[node name="Out" type="Sprite2D" parent="Circuit/Trigger1"]
z_index = 1
rotation = -1.5708
texture = SubResource("AtlasTexture_ivpx0")

[node name="Trigger2" type="Sprite2D" parent="Circuit"]
z_index = 1
position = Vector2(78, -114)
texture = SubResource("AtlasTexture_a6i1b")

[node name="Out" type="Sprite2D" parent="Circuit/Trigger2"]
z_index = 1
rotation = -1.5708
texture = SubResource("AtlasTexture_ivpx0")

[node name="Trigger3" type="Sprite2D" parent="Circuit"]
z_index = 1
position = Vector2(294, -114)
texture = SubResource("AtlasTexture_a6i1b")

[node name="Out" type="Sprite2D" parent="Circuit/Trigger3"]
z_index = 1
rotation = -1.5708
texture = SubResource("AtlasTexture_ivpx0")

[node name="Button1" parent="Circuit" instance=ExtResource("8_5mb4r")]
position = Vector2(186, -384)
rotation = 3.14159

[node name="ButtonLow1" parent="Circuit" instance=ExtResource("8_5mb4r")]
position = Vector2(78, -108)
rotation = 3.14159

[node name="ButtonLow2" parent="Circuit" instance=ExtResource("8_5mb4r")]
position = Vector2(294, -108)
rotation = 3.14159

[node name="TL" type="Marker2D" parent="."]
position = Vector2(0, -456)
metadata/_edit_lock_ = true

[node name="BR" type="Marker2D" parent="."]
position = Vector2(372, 0)
metadata/_edit_lock_ = true

[node name="Spawn" type="Marker2D" parent="."]
position = Vector2(186, -18)

[node name="Coin" parent="." instance=ExtResource("9_gnk31")]
position = Vector2(186, -258)

[node name="Exit" parent="." instance=ExtResource("10_t0a2i")]
position = Vector2(186, -426)

[connection signal="click" from="Circuit/Button1" to="Circuit" method="_on_button_click"]
[connection signal="click" from="Circuit/ButtonLow1" to="Circuit" method="_on_button_low_1_click"]
[connection signal="click" from="Circuit/ButtonLow2" to="Circuit" method="_on_button_low_2_click"]
